# todoapp

./: .env.example  .env.github  .env.sample  .gitignore  Makefile  README.md  app.py  build.sh  db.sqlite3  manage.py  package.json  pnpm-lock.yaml  postcss.config.js  pyproject.toml  pyvenv.cfg  requirements-dev.txt  requirements.txt  tailwind.config.js  utils.py  vercel.json
.github/workflows/: test.yaml
ToDoApp/: models.py  urls.py  views.py
ToDoApp/migrations/: 0001_initial.py
ToDoApp/templates/: Login.html  Register.html  about.html  task_create.html  task_delete.html  task_detail.html  task_list.html
ToDoApp/templates/components/: footer.html  header.html
accounts/: forms.py  tests.py  urls.py  views.py
backend/: settings.py  urls.py  wsgi.py
commands/: format.sh
db/: postgresdb.py
pages/: tests.py  urls.py  views.py
src/: settings.py  urls.py
static/: style.css
templates/: base.html
templates/accounts/: sign-in.html  sign-up.html
templates/components/: footer.html  header.html
templates/css/: index.html
templates/etc/: etc.html
templates/js/: index.html
templates/pages/: about.html  home.html
templates/tasks/: task_create.html  task_delete.html  task_detail.html  task_list.html
todo/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_auto_20220925_0546.py
web/: manage.py
web/apps/accounts/: forms.py  urls.py  views.py
web/apps/pages/: urls.py  views.py
web/backend/: settings.py  urls.py  wsgi.py
web/db/: postgresdb.py
web/templates/: base.html
(+12 files in other folders)
