[tool.poetry]
name = "todo-app-in-django"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
readme = "README.md"
packages = [{include = "todo_app_in_django"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3.2,<3.3"
whitenoise = "^6.2.0"
crispy-tailwind = "^0.5.0"
psycopg2-binary = "^2.9.3"
django-cockroachdb = ">=3.2,<3.3"
django-dotenv = "^1.4.2"


[tool.poetry.group.dev.dependencies]
gunicorn = "^20.1.0"
uvicorn = "^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
