[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = "A Todo app using Django, Postgres and Tailwind CSS"
authors = ["Arvind-4 <pingarvindforquestions@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3.2,<3.3"
whitenoise = "^6.2.0"
crispy-tailwind = "^0.5.0"
psycopg2-binary = "^2.9.3"
django-cockroachdb = ">=3.2,<3.3"
django-dotenv = "^1.4.2"


[tool.poetry.group.dev.dependencies]
gunicorn = "^20.1.0"
uvicorn = "^0.18.3"
ruff = "^0.5.4"
djlint = "^1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
